# movdata

./: README.md  pyproject.toml
data/movies/year=2014/: data.json
data/movies/year=2021/: data.json
data/movies/year=2022/: data.json
data/movies/year=2023/: data.json
data/movies/year=2024/: data.json
src/movdata/: mov_com_list.py  mov_detail.py  movlist.py
tests/: test_movlist.py
